[gd_scene load_steps=10 format=3 uid="uid://gld1wbqp2u0a"]

[ext_resource type="Script" path="res://scenes/enemies/fighter/fighter.gd" id="1_3alcv"]
[ext_resource type="Texture2D" uid="uid://5i7r8on4jp32" path="res://scenes/enemies/fighter/fighter.png" id="1_i10am"]
[ext_resource type="Script" path="res://components/boid.gd" id="2_c6emw"]
[ext_resource type="Script" path="res://components/boid_field.gd" id="2_wgqla"]
[ext_resource type="Script" path="res://components/damageable.gd" id="3_il4xf"]
[ext_resource type="Script" path="res://scenes/weapons/weapon.gd" id="6_8rtli"]
[ext_resource type="Script" path="res://components/trail.gd" id="7_g8vnp"]
[ext_resource type="PackedScene" uid="uid://cmxb72tb75myl" path="res://scenes/entities/marker/marker.tscn" id="8_0d8jy"]

[sub_resource type="Curve" id="Curve_04hca"]
max_value = 2.0
_data = [Vector2(0, 0.136364), 0.0, 3.05152, 0, 0, Vector2(1, 1.85455), 0.0, 0.0, 0, 0]

[node name="Fighter" type="RigidDynamicBody2D"]
collision_layer = 4
collision_mask = 2
mass = 2.0
script = ExtResource( "1_3alcv" )

[node name="Boid" type="Node" parent="."]
script = ExtResource( "2_c6emw" )
speed = 30
orbit_distance_min = 235
orbit_distance_max = 290

[node name="BoidField" type="Node" parent="."]
script = ExtResource( "2_wgqla" )

[node name="Damageable" type="Node" parent="."]
script = ExtResource( "3_il4xf" )
health = 4

[node name="Fighter" type="Sprite2D" parent="."]
position = Vector2(6, 0)
texture = ExtResource( "1_i10am" )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, -4, -2, 4, 6, 6, 13, 4, 13, -4, 6, -6)

[node name="FireRayCast" type="RayCast2D" parent="."]
target_position = Vector2(200, 0)
collision_mask = 3

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( "6_8rtli" )
rof = 2.0
bullet_path = "/home/illya/Documents/repos/cssa-game-jam/game/scenes/bullets/bullet_red.tscn"
fire_points_path = NodePath("../FirePoints")

[node name="FirePoints" type="Node2D" parent="."]
position = Vector2(7, 0)

[node name="Position2D" type="Position2D" parent="FirePoints"]
position = Vector2(12, 3)

[node name="Position2D2" type="Position2D" parent="FirePoints"]
position = Vector2(12, -3)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-2, 3)

[node name="Trail" type="Line2D" parent="Node2D"]
show_behind_parent = true
top_level = true
width = 1.0
width_curve = SubResource( "Curve_04hca" )
default_color = Color(0.984314, 0.94902, 0.211765, 1)
script = ExtResource( "7_g8vnp" )
length = 20

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(-2, -3)

[node name="Trail" type="Line2D" parent="Node2D2"]
show_behind_parent = true
top_level = true
width = 1.0
width_curve = SubResource( "Curve_04hca" )
default_color = Color(0.984314, 0.94902, 0.211765, 1)
script = ExtResource( "7_g8vnp" )
length = 20

[node name="Marker" parent="." instance=ExtResource( "8_0d8jy" )]

[connection signal="damaged" from="Damageable" to="." method="_on_damageable_damaged"]
[connection signal="destroyed" from="Damageable" to="." method="_on_damageable_destroyed"]
